test/src/e2e_vm_tests/test_programs/should_pass/language/intrinsics/src/main.sw
script;

use std::assert::assert;

fn main() -> u64 {

  assert(true == true);
  assert(true != false);

  assert(__eq(1, 22) == (1 == 22));
  assert(__eq(1, 1) == (1 == 1));

  2
}
