test/src/e2e_vm_tests/test_programs/should_fail/arith_overflow/u8_sub_const_eval_underflow/src/main.sw
script;

const RESULT: u8 = u8::min() - 1;

fn main() -> u8 {
    RESULT
}
